--- a/www/templates/addDeposit.html
+++ b/www/templates/addDeposit.html
@@ -40,7 +40,7 @@
     <nav class="red">
         <div class="nav-wrapper container">
             <a href="/home" class="brand-logo center-on-small-only">Fin-Hack</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Login</i></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Add Expense</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="/">Home</a></li>
                 <li><a href="/aboutUs">About Us</a></li>
@@ -65,20 +65,27 @@
     <div class="row">
         <form class="col s12">
             <div class="row">
-                <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" name="email">
-                    <label for="email">Email</label>
+                <div class="input-field col s6">
+                    <input placeholder="How much money will you deposit?" id="deposit" type="number" class="validate" name="deposit">
+                    <label for="deposit">Amount</label>
                 </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="password" type="password" class="validate" name="password">
-                    <label for="password">Password</label>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input placeholder="Where?" id="place" type="text" class="validate">
+                        <label for="place">Place</label>
+                    </div>
                 </div>
-            </div>
-            <button class="waves-effect waves-light btn" type="submit">Login</button>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input placeholder="Anything else about the money you wanna talk about?" id="desc" type="text" class="validate" name="description">
+                        <label for="desc">Description</label>
+                    </div>
+                </div>
+
+                <button class="waves-effect waves-light btn" type="submit">Proceed</button>
         </form>
     </div>
+
 </div>
 
 
