--- a/www/templates/currentBalance.html
+++ b/www/templates/currentBalance.html
@@ -45,18 +45,34 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/aboutUs">About Us</a></li>
                 <li><a href="contactUs.html">Contact Us</a></li>
+                <li><a href="viewTransactions.html">View Transactions</a> </li>
+                <li><a href="addDeposit.html">Add Deposit</a> </li>
+                <li><a href="about.html">About</a> </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
                 <li><a href="main.html">Home</a></li>
                 <li><a href="aboutUs.html">About Us</a></li>
                 <li><a href="contactUs.html">Contact Us</a></li>
+                <li><a href="viewTransactions.html">View Transactions</a> </li>
+                <li><a href="addDeposit.html">Add Deposit</a> </li>
+                <li><a href="about.html">About</a> </li>
             </ul>
         </div>
     </nav>
 </header>
 
 <div class="container">
-    
+    <div class="row">
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input placeholder="How much money are you starting with?" id="balance" type="number" class="validate" name ="balance">
+                    <label for="balance">Initial Balance</label>
+                </div>
+
+                <button class="waves-effect waves-light btn" type="submit">Proceed</button>
+        </form>
+    </div>
 </div>
 
 
