--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -45,11 +45,17 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/aboutUs">About Us</a></li>
                 <li><a href="contactUs.html">Contact Us</a></li>
+                <li><a href="viewTransactions.html">View Transactions</a> </li>
+                <li><a href="addDeposit.html">Add Deposit</a> </li>
+                <li><a href="about.html">About</a> </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
                 <li><a href="main.html">Home</a></li>
                 <li><a href="aboutUs.html">About Us</a></li>
                 <li><a href="contactUs.html">Contact Us</a></li>
+                <li><a href="viewTransactions.html">View Transactions</a> </li>
+                <li><a href="addDeposit.html">Add Deposit</a> </li>
+                <li><a href="about.html">About</a> </li>
             </ul>
         </div>
     </nav>
@@ -82,8 +88,8 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input id="email" type="tel" class="validate" placeholder="Number">
-                <label for="email">Phone Number</label>
+                <input id="Number" type="tel" class="validate" placeholder="Number">
+                <label for="Number">Phone Number</label>
             </div>
         </div>
         <button class="waves-effect waves-light btn" type="submit">Register</button>
