--- a/www/templates/incomeFlow.html
+++ b/www/templates/incomeFlow.html
@@ -33,6 +33,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" href="../css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/material%20icons/material-icons.css">
     <title>Fin-Hack</title>
 </head>
 <body>
@@ -40,7 +41,7 @@
     <nav class="red">
         <div class="nav-wrapper container">
             <a href="/home" class="brand-logo center-on-small-only">Fin-Hack</a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">Register</i></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="/">Home</a></li>
                 <li><a href="/aboutUs">About Us</a></li>
@@ -51,8 +52,6 @@
             </ul>
             <ul class="side-nav" id="mobile-demo">
                 <li><a href="main.html">Home</a></li>
-                <li><a href="aboutUs.html">About Us</a></li>
-                <li><a href="contactUs.html">Contact Us</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addDeposit.html">Add Deposit</a> </li>
                 <li><a href="about.html">About</a> </li>
@@ -85,6 +84,7 @@
 <script src="../js/materialize.min.js"></script>
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="../js/index.js"></script>
+<script type="text/javascript" src="../js/common.js"></script>
 </body>
 </html>
 
