--- a/www/templates/addExpense.html
+++ b/www/templates/addExpense.html
@@ -43,16 +43,18 @@
             <a href="/home" class="brand-logo center-on-small-only">Fin-Hack</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="/">Home</a></li>
-                <li><a href="/aboutUs">About Us</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="/aboutUs.html">About Us</a></li>
                 <li><a href="contactUs.html">Contact Us</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
+                <li><a href="addExpense.html">Add Expense</a> </li>
                 <li><a href="addDeposit.html">Add Deposit</a> </li>
                 <li><a href="about.html">About</a> </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
-                <li><a href="main.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
+                <li><a href="addExpense.html">Add Expense</a> </li>
                 <li><a href="addDeposit.html">Add Deposit</a> </li>
                 <li><a href="about.html">About</a> </li>
             </ul>
@@ -65,7 +67,7 @@
         <h3> Add Expense</h3>
         <form id="addExpenseForm" class="col s12" method="post">
             <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12">
                     <input placeholder="How much money did you spend?" id="amount" type="text" class="validate">
                     <label for="amount">Amount</label>
                 </div>
