--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -40,7 +40,7 @@
 <header>
     <nav class="red">
         <div class="nav-wrapper container">
-            <a href="/home" class="brand-logo center-on-small-only">Fin-Hack</a>
+            <a href="/home" class="brand-logo center-on-small-only">Home</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="home.html">Home</a></li>
@@ -64,20 +64,21 @@
 
 <div class="container">
     <div class="row">
-        <form class="col s12">
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="income" type="number" class="validate" name="monthlyIncome">
-                    <label for="income">Monthly Income</label>
-                </div>
-            </div>
-                <p class="range-field">
-                    <input type="range" id="dateOfPayment" min="1" max="31" />
-                    <label for="dateOfPayment">Date of Monthly Payment</label>
+        <h4 class="collection-item col s6" >Account Balance</h4><h3 class="secondary-content" id="balanceID">OKAY</h3>
+    </div>
+
+    <div class="row">
+        <h5 class="collection-item col s12" >LAST 5 TRANSACTIONS</h5>
+        <ul class="collection" id="transactionID">
+
+            <li class="collection-item avatar" id="last5ID">
+                <span class="title">Place</span>
+                <p>Expense/Deposit<br>
+                    Date
                 </p>
-            </div>
-            <button class="waves-effect waves-light btn" type="submit">Proceed</button>
-        </form>
+                <a class="secondary-content">Amount</a>
+            </li>
+        </ul>
     </div>
 </div>
 
