--- a/www/templates/viewTransactions.html
+++ b/www/templates/viewTransactions.html
@@ -40,7 +40,7 @@
 <header>
     <nav class="red">
         <div class="nav-wrapper container">
-            <a href="/home" class="brand-logo center-on-small-only">Fin-Hack</a>
+            <a href="/home" class="brand-logo center-on-small-only">Transactions</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="home.html">Home</a></li>
@@ -64,20 +64,20 @@
 
 <div class="container">
     <div class="row">
-        <form class="col s12">
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="income" type="number" class="validate" name="monthlyIncome">
-                    <label for="income">Monthly Income</label>
-                </div>
-            </div>
-                <p class="range-field">
-                    <input type="range" id="dateOfPayment" min="1" max="31" />
-                    <label for="dateOfPayment">Date of Monthly Payment</label>
-                </p>
-            </div>
-            <button class="waves-effect waves-light btn" type="submit">Proceed</button>
-        </form>
+    <h5 class="collection-item col s6" >Monthly Income</h5><h5 class="secondary-content" id="incomeID">OKAY THEN</h5>
+    </div>
+    <ul class="collection" id="transactionID">
+
+        <li class="collection-item avatar">
+            <span class="title">Place</span>
+            <p>Expense/Deposit<br>
+                Date
+            </p>
+            <a class="secondary-content">Amount</a>
+        </li>
+    </ul>
+    <div class="row">
+        <h5 class="collection-item col s6" >Remaining Balance</h5><h5 class="secondary-content" id="balanceID">BALANCE</h5>
     </div>
 </div>
 
