templates nearly final

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -43,7 +43,7 @@
             <a href="/home" class="brand-logo center-on-small-only">Home</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="/">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addExpense.html">Add Expense</a> </li>
                 <li><a href="addDeposit.html">Add Deposit</a> </li>
