--- a/www/templates/currentBalance.html
+++ b/www/templates/currentBalance.html
@@ -28,6 +28,7 @@
         * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
             * Enable inline JS: add 'unsafe-inline' to default-src
     -->
+    <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: *; style-src *; media-src *">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -42,6 +43,7 @@
             <a href="/home" class="brand-logo center-on-small-only">Fin-Hack</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
+                <li><a href="./templates/login.html">Login</a></li>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addExpense.html">Add Expense</a> </li>
@@ -76,6 +78,7 @@
 
 
 <script type="text/javascript" src="../js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="../js/jquery.form.min.js"></script>
 <script src="../js/materialize.min.js"></script>
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
