templates variables renamed

--- a/www/templates/addDeposit.html
+++ b/www/templates/addDeposit.html
@@ -67,12 +67,12 @@
         <form class="col s12">
             <div class="row">
                 <div class="input-field col s12">
-                    <input placeholder="How much money will you deposit?" id="deposit" type="number" class="validate" name="deposit">
+                    <input placeholder="How much money will you deposit?" id="deposit" type="number" class="validate" name="amount">
                     <label for="deposit">Amount</label>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input placeholder="Where?" id="place" type="text" class="validate">
+                        <input placeholder="Where?" id="place" type="text" class="validate" name="description">
                         <label for="place">Place</label>
                     </div>
                 </div>
