--- a/www/templates/addExpense.html
+++ b/www/templates/addExpense.html
@@ -67,12 +67,12 @@
         <form id="addExpenseForm" class="col s12" method="post">
             <div class="row">
                 <div class="input-field col s12">
-                    <input placeholder="How much money did you spend?" id="amount" type="text" class="validate">
+                    <input placeholder="How much money did you spend?" id="amount" type="text" class="validate" name="amount">
                     <label for="amount">Amount</label>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
-                        <input placeholder="Where?" id="place" type="text" class="validate">
+                        <input placeholder="Where?" id="place" type="text" class="validate" name="description">
                         <label for="place">Place</label>
                     </div>
                 </div>
