--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -89,7 +89,7 @@
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <input id="tel" type="tel" class="validate" placeholder="Number" name="number" required>
+                <input id="tel" type="tel" class="validate" placeholder="Number" name="phone_no" required>
                 <label for="tel">Phone Number</label>
                 <input id="Number" type="tel" class="validate" placeholder="Number">
                 <label for="Number">Phone Number</label>
