templates currentBalance removed

--- a/www/templates/incomeFlow.html
+++ b/www/templates/incomeFlow.html
@@ -75,6 +75,10 @@
                     <label for="dateOfPayment">Date of Monthly Payment</label>
                 </p>
             </div>
+            <div class="input-field col s12">
+               <input placeholder="How much money are you starting with?" id="balance" type="number" class="validate" name ="balance">
+               <label for="balance">Initial Balance</label>
+            </div>
             <button class="waves-effect waves-light btn" type="submit">Proceed</button>
         </form>
     </div>
