templates redirect buttons

--- a/www/templates/incomeFlow.html
+++ b/www/templates/incomeFlow.html
@@ -66,7 +66,7 @@
         <form class="col s12">
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="income" type="number" class="validate" name="monthlyIncome">
+                    <input id="income" type="number" class="validate" name="monthlyIncome" placeholder="How much money do you get in a month?">
                     <label for="income">Monthly Income</label>
                 </div>
             </div>
