--- a/www/templates/addExpense.html
+++ b/www/templates/addExpense.html
@@ -76,6 +76,7 @@
                         <label for="place">Place</label>
                     </div>
                 </div>
+                <input name="type" value="Expense" style="display: none">
                 <div class="row">
                     <div class="input-field col s12">
                         <input placeholder="Anything else about the money you wanna talk about?" id="desc" type="text" class="validate">
