--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -69,6 +69,7 @@
         <br>
         It's a Money Management App for the lazy user, like most of us. We hope you like it.
         Shoutout to my boy Drake.
+        <br> Rohit Gohri<br>Shubham Arora<br>Saksham Kalsi
     </div>
 
 </div>
