removed income flow redirect loop

--- a/www/templates/incomeFlow.html
+++ b/www/templates/incomeFlow.html
@@ -50,7 +50,8 @@
                 <li><a href="about.html">About</a> </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
-                <li><a href="./templates/login.html">Login</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addExpense.html">Add Expense</a> </li>
@@ -63,10 +64,10 @@
 
 <div class="container">
     <div class="row">
-        <form class="col s12">
+        <form id="#incomeFlow" class="col s12">
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="income" type="number" class="validate" name="monthlyIncome" placeholder="How much money do you get in a month?">
+                    <input id="income" type="number" class="validate" name="monthlyCredit" placeholder="How much money do you get in a month?">
                     <label for="income">Monthly Income</label>
                 </div>
             </div>
