--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -50,8 +50,9 @@
                 <li><a href="about.html">About</a> </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
-                <li><a href="./templates/login.html">Login</a></li>
-                <li><a href=".home.html">Home</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addExpense.html">Add Expense</a> </li>
                 <li><a href="addDeposit.html">Add Deposit</a> </li>
@@ -91,8 +92,6 @@
             <div class="input-field col s12">
                 <input id="tel" type="tel" class="validate" placeholder="Number" name="phone_no" required>
                 <label for="tel">Phone Number</label>
-                <input id="Number" type="tel" class="validate" placeholder="Number">
-                <label for="Number">Phone Number</label>
             </div>
         </div>
         <button id="register" class="waves-effect waves-light btn" type="submit">Register</button>
@@ -106,6 +105,7 @@
 <script src="../js/materialize.min.js"></script>
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src="../js/logic/register.js"></script>
 <script type="text/javascript" src="../js/index.js"></script>
 </body>
 </html>
