--- a/www/templates/viewTransactions.html
+++ b/www/templates/viewTransactions.html
@@ -50,6 +50,8 @@
                 <li><a href="about.html">About</a> </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addExpense.html">Add Expense</a> </li>
@@ -84,8 +86,10 @@
 <script type="text/javascript" src="../js/jquery.form.min.js"></script>
 <script src="../js/materialize.min.js"></script>
 <script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="../js/index.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src="../js/logic/transaction.js"></script>
+<script type="text/javascript" src="../js/index.js"></script>
+
 </body>
 </html>
 
