--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -43,7 +43,7 @@
             <a href="/home" class="brand-logo center-on-small-only">Fin-Hack</a>
             <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="./templates/login.html">Login</a></li>
+                <li><a href="login.html">Login</a></li>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addExpense.html">Add Expense</a> </li>
@@ -51,6 +51,8 @@
                 <li><a href="about.html">About</a> </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addExpense.html">Add Expense</a> </li>
