--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -50,8 +50,9 @@
                 <li><a href="about.html">About</a> </li>
             </ul>
             <ul class="side-nav" id="mobile-demo">
-                <li><a href="./templates/login.html">Login</a></li>
-                <li><a href="main.html">Home</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="viewTransactions.html">View Transactions</a> </li>
                 <li><a href="addExpense.html">Add Expense</a> </li>
                 <li><a href="addDeposit.html">Add Deposit</a> </li>
