--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -88,6 +88,7 @@
 <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" src="../js/index.js"></script>
 <script type="text/javascript" src="../js/common.js"></script>
+<script type="text/javascript" src="../js/logic/transaction.js"></script>
 </body>
 </html>
 
